syntax = "proto3";
package emortal.model.gameplayerdata;

option java_package = "dev.emortal.api.model.gamedata";
option java_multiple_files = true;
option go_package = "github.com/emortalmc/proto-specs/gen/go/model/gameplayerdata";

enum GameDataGameMode {
  TOWER_DEFENCE = 0;
  BLOCK_SUMO = 1;
  MINESWEEPER = 2;
  MARATHON = 3;
}

// These messages exist for coercion of the generic data from GetGamePlayerData and the UpdateGamePlayerDataMessage
// WARNING: Unlike usual, as we are using a FieldMask the names of the fields DO MATTER, not just their number

message V1BlockSumoPlayerData {
  uint32 block_slot = 1;
  uint32 shears_slot = 2;
}

message V1MarathonData {
  string time = 1;
  string block_palette = 2;
  optional string animation = 3;
}

message V1TowerDefencePlayerData {} // todo

message V1MinesweeperProfile {
  string profile_id = 1;
  string owner_id = 2;
  repeated string player_ids = 3;
  bytes save_data = 4;
}
